bug with nav where bottom gets covered on iphone

--- a/src/styles/nav.module.css
+++ b/src/styles/nav.module.css
@@ -78,7 +78,7 @@
     display: flex;
     flex-direction: column;
     margin-top: auto;
-    margin-bottom: 50%;
+    margin-bottom: auto;
     margin-left: .3rem;
 }
 
